2008-01-17  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/gtk+-2.0.metadata: fix color parameters of
	  gtk_widget_modify_*

	* vapi/gtk+-2.0.vapi: regenerated

2008-01-17  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am: append gee.vapi to vala-1.0.vapi

2008-01-17  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/: remove gstreamer-base-0.10 bindings
	* vapi/gstreamer-0.10.vapi: regenerated

	* vapi/gstreamer-audio-0.10.deps, vapi/gstreamer-audio-0.10.vapi,
	  vapi/packages/gstreamer-audio-0.10/: add gstreamer-audio-0.10 bindings

	* vapi/gstreamer-base-0.10.deps, vapi/gstreamer-base-0.10.vapi,
	  vapi/packages/gstreamer-base-0.10/: add gstreamer-base-0.10 bindings

	* vapi/gstreamer-check-0.10.deps, vapi/gstreamer-check-0.10.vapi,
	  vapi/packages/gstreamer-check-0.10/: add gstreamer-check-0.10 bindings

	* vapi/gstreamer-controller-0.10.deps,
	  vapi/gstreamer-controller-0.10.vapi,
	  vapi/packages/gstreamer-controller-0.10/: add
	  gstreamer-controller-0.10 bindings

	* vapi/gstreamer-dataprotocol-0.10.deps,
	  vapi/gstreamer-dataprotocol-0.10.vapi,
	  vapi/packages/gstreamer-dataprotocol-0.10/: add
	  gstreamer-dataprotocol-0.10 bindings

	* vapi/gstreamer-fft-0.10.deps, vapi/gstreamer-fft-0.10.vapi,
	  vapi/packages/gstreamer-fft-0.10/: add gstreamer-fft-0.10 bindings

	* vapi/gstreamer-interfaces-0.10.deps,
	  vapi/gstreamer-interfaces-0.10.vapi,
	  vapi/packages/gstreamer-interfaces-0.10/: add
	  gstreamer-interfaces-0.10 bindings

	* vapi/gstreamer-net-0.10.deps, vapi/gstreamer-net-0.10.vapi,
	  vapi/packages/gstreamer-net-0.10/: add gstreamer-net-0.10 bindings

	* vapi/gstreamer-netbuffer-0.10.deps,
	  vapi/gstreamer-netbuffer-0.10.vapi,
	  vapi/packages/gstreamer-netbuffer-0.10/: add gstreamer-netbuffer-0.10
	  bindings

	* vapi/gstreamer-pbutils-0.10.deps, vapi/gstreamer-pbutils-0.10.vapi,
	  vapi/packages/gstreamer-pbutils-0.10/: add gstreamer-pbutils-0.10
	  bindings
